# pastebin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  justfile
docs/design/: 2026-06-08-225820-create-the-rust-web-app-described-in-docsdesign.txt  prompt.md
docs/superpowers/specs/: 2026-06-08-pastebin-design.md
paste-cli/: Cargo.toml
paste-cli/src/: lib.rs  main.rs
paste-cli/tests/: upload.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  models.rs  pastes.rs  web_ui.rs
server/tests/: integration.rs
src/: auth.rs  config.rs  db.rs  ids.rs  models.rs  pastes.rs  validation.rs  web_ui.rs
