[package]
name = "paste-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Command-line client that sends a file to a pastebin server."

[[bin]]
name = "paste"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
wiremock = "0.6"
